# BuzzerMinds

./: .env.example  .gitignore  PLAN.md  README.md  config.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260310_01_create_game_summaries.py
backend/src/buzzerminds_backend/: __main__.py  app.py  audio.py  config.py  db.py  db_models.py  gameplay_generation.py  logging_config.py  metrics.py  realtime.py  retrieval.py  room_manager.py  runtime.py  schemas.py  security.py  storage.py  topic_generation.py  turnstile.py
backend/tests/: conftest.py  test_rooms.py
design-previews/: 1-flat-playful.html  2-flat-minimal.html  3-flat-retro.html  4-flat-bold.html  5-final-mix.html
design-previews/display-game/: all-variations.html  full-focus-demo.html
design-previews/layouts/: A-cascading-falls.html  B-center-gravity.html  C-split-towers.html  D-scattered-atoms.html  E-headline-news.html  F-l-frame.html  G-diagonal-drift.html  H-arena-ring.html  I-cinematic-wide.html  J-horizon-line.html  index.html
design-previews/player-game/: all-variations.html  full-bleed-demo.html
design-previews/player-join/: 01-stacked-card.html  02-step-wizard.html  03-split-hero.html  04-floating-pill.html  05-chat-bubble.html  06-arcade-ticket.html  07-full-bleed.html  08-avatar-builder.html  09-compact-stack.html  (+1 more)
docs/: production.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
nginx/: default.conf
scripts/: generate-intro-narration.py
(+62 files in other folders)
